<resources>
    <string name="app_name">SaveData</string>

    <!-- Preferences Key -->
    <!--When naming your shared preference files, you should use a name that's uniquely identifiable to your app, such as "com.example.myapp.PREFERENCE_FILE_KEY"-->
    <string name="preference_file_key">com.example.george.savedata.PREFERENCE_FILE_KEY</string>
    <string name="saved_high_score">HighScore</string>
    <integer name="saved_high_score_default">0</integer>


    <!-- MainActivity -->
    <string name="key_value_label">@string/saving_key_value_sets_button</string>
    <string name="key_value_load_label">@string/loading_key_value_sets_button</string>
    <string name="file_label">@string/saving_files_button</string>
    <string name="activity_description">This is an Activity!</string>

    <!-- Fragment -->
    <string name="fragment_description">This is a Fragment!</string>
    <string name="edit_text_hint">Score</string>

    <!-- Button texts -->
    <string name="saving_key_value_sets_button">Save Key-Value Sets</string>
    <string name="saving_files_button">Save Files</string>
    <string name="saving_data_in_sql_databases_button">Save Data in SQL Databases</string>
    <string name="loading_key_value_sets_button">Load Key-Value Sets</string>
    <string name="save_high_score_button">Save High Score</string>
    <string name="write_into_file_button">Write Text into File</string>
    <string name="read_from_file_button">Read Text From file</string>
    <string name="delete_a_file_button">Delete a file</string>
    <string name="insert_into_database">Insert into Database</string>
    <string name="read_from_database">Read from Database</string>
    <string name="delete_from_database">Delete from Database</string>
    <string name="update_database">Update Database</string>

    <!-- TextView texts -->
    <string name="entry_id">Entry ID</string>
    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>

    <!-- Save Files Activity-->
    <string name="text_label">Android Read and Write Text form File</string>
</resources>
