<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.george.savedata.SaveDataInSqlDatabasesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entry_id"/>

        <EditText
            android:id="@+id/entry_id_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:hint="@string/entry_id"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"/>

        <EditText
            android:id="@+id/title_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:hint="@string/title"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subtitle"/>

        <EditText
            android:id="@+id/subtitle_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:hint="@string/subtitle"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/insert_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:onClick="putInfoIntoDatabase"
            android:text="@string/insert_into_database"/>

        <Button
            android:id="@+id/read_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="readInfoFromDatabase"
            android:text="@string/read_from_database"/>

        <Button
            android:id="@+id/delete_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="deleteInfoFromDatabase"
            android:text="@string/delete_from_database"/>

        <Button
            android:id="@+id/update_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="updateDatabase"
            android:text="@string/update_database"/>

    </LinearLayout>

</ScrollView>